# Study_record

./: Git 学习.md  Pytorch - 神经网络 学习.md  Pytorch 学习.md  config.yml
lstm-stock-prediction/: main.py  pyproject.toml
predict_temp_project/: README.md  industrial_data_7days.csv  main.py  predict_temp.py  pyproject.toml
